--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "assessment",
+  "name": "mid-assessment",
   "version": "1.0.0",
   "description": "Assessment test",
   "main": "app.js",
@@ -11,8 +11,10 @@
   "author": "Riyasat Ali",
   "license": "ISC",
   "dependencies": {
+    "bcryptjs": "^2.4.3",
+    "dotenv": "^11.0.0",
     "express": "^4.17.1",
+    "jsonwebtoken": "^8.5.1",
     "mongoose": "^5.8.9"
-  },
-  "devDependencies": {}
+  }
 }
